--- a/src/app/pages/intro/intro.component.html
+++ b/src/app/pages/intro/intro.component.html
@@ -1,8 +1,8 @@
 <div class="container">
 
-  <app-language-selector *ngIf='step === 1' (languageSelectionEvent)="nextStep()"></app-language-selector>
+  <app-language-selector *ngIf="step === 1" [@InOut] (languageSelectionEvent)="nextStep()"></app-language-selector>
 
-  <div *ngIf="step === 2" class="">
+  <div *ngIf="step === 2" [@InOut] class="form-wrapper">
     <h1>{{ 'intro.title' | translate }}</h1>
     <p>
       {{ 'intro.description' | translate }}
@@ -10,26 +10,35 @@
       {{ 'intro.description2' | translate }}
     </p>
     <div>
-      <h5>{{ 'intro.nameLabel' | translate }}</h5>
-      <input type="text" pInputText [(ngModel)]="user.name" class="full"/>
-      <h5>{{ 'intro.passwordLabel' | translate }}</h5>
-      <p-password [(ngModel)]="user.password" [toggleMask]="true" styleClass="full" inputStyleClass="full">
-        <ng-template pTemplate="header">
-          <h6>{{ 'intro.passwordPickerTitle' | translate }}</h6>
-        </ng-template>
-        <ng-template pTemplate="footer">
-          <p-divider></p-divider>
-          <p class="p-mt-2">{{ 'intro.passwordSuggestionTitle' | translate }}</p>
-          <ul class="p-pl-2 p-ml-2 p-mt-0" style="line-height: 1.5">
-            <li>{{ 'intro.passwordSuggestion1' | translate }}</li>
-            <li>{{ 'intro.passwordSuggestion2' | translate }}</li>
-            <li>{{ 'intro.passwordSuggestion3' | translate }}</li>
-            <li>{{ 'intro.passwordSuggestion4' | translate }}</li>
-          </ul>
-        </ng-template>
-      </p-password>
-      <h5>{{ 'intro.confirmPasswordLabel' | translate }}</h5>
-      <p-password [(ngModel)]="confirmPassword" [toggleMask]="true" [feedback]="false"  styleClass="full" inputStyleClass="full"></p-password>
+      <div class="p-field">
+        <label id="name">{{ 'intro.nameLabel' | translate }}</label>
+        <input id="name" type="text" pInputText [(ngModel)]="user.name" class="full"/>
+        <small *ngIf="errors.name" id="name-help" class="p-error">{{ 'intro.nameError' | translate }}</small>
+      </div>
+      <div class="p-field">
+        <label for="password">{{ 'intro.passwordLabel' | translate }}</label>
+        <p-password id="password" [(ngModel)]="user.password" [toggleMask]="true" styleClass="full" inputStyleClass="full">
+          <ng-template pTemplate="header">
+            <h6>{{ 'intro.passwordPickerTitle' | translate }}</h6>
+          </ng-template>
+          <ng-template pTemplate="footer">
+            <p-divider></p-divider>
+            <p class="p-mt-2">{{ 'intro.passwordSuggestionTitle' | translate }}</p>
+            <ul class="p-pl-2 p-ml-2 p-mt-0" style="line-height: 1.5">
+              <li>{{ 'intro.passwordSuggestion1' | translate }}</li>
+              <li>{{ 'intro.passwordSuggestion2' | translate }}</li>
+              <li>{{ 'intro.passwordSuggestion3' | translate }}</li>
+              <li>{{ 'intro.passwordSuggestion4' | translate }}</li>
+            </ul>
+          </ng-template>
+        </p-password>
+        <small *ngIf="errors.password" id="password-help" class="p-error">{{ 'intro.passwordError' | translate }}</small>
+      </div>
+      <div class="p-field">
+        <label for="confirmPassword">{{ 'intro.confirmPasswordLabel' | translate }}</label>
+        <p-password id="confirmPassword" [(ngModel)]="confirmPassword" [toggleMask]="true" [feedback]="false"  styleClass="full" inputStyleClass="full"></p-password>
+        <small *ngIf="errors.confirmPassword" id="confirmPassword-help" class="p-error">{{ 'intro.confirmPasswordError' | translate }}</small>
+      </div>
       <div class="submit-wrapper">
         <p-button label="{{ 'intro.saveUserButtonLabel' | translate }}" styleClass="p-button full" (onClick)="save($event)"></p-button>
       </div>
