--- a/src/app/pages/intro/intro.component.scss
+++ b/src/app/pages/intro/intro.component.scss
@@ -5,3 +5,20 @@
   align-items: center;
   justify-content: center;
 }
+
+.p-field {
+  margin-top: 30px;
+  position: relative;
+
+  label {
+    font-size: 0.9rem;
+    display: block;
+    font-weight: 700;
+    padding-bottom: 10px;
+  }
+  .p-error {
+    display: block;
+    position: absolute;
+    bottom: -20px;
+  }
+}
