--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<div class="wrapper">
+  <div class="side-menu">
+    <div class="side-menu-header">
+      <button>abrir</button>
+    </div>
+    <div class="image-container">
+      <div class="image-wrapper">
+        <img src="assets/images/null-profile.png">
+      </div>
+    </div>
+    <div class="groups">
+      <ul class="list">
+        <span></span>
+        <li>Cryptos</li>
+        <li>Web</li>
+        <li></li>
+      </ul>
+    </div>
+    <div class="side-menu-footer">footer</div>
+  </div>
+
+  <div class="content">dsa</div>
+</div>
